force-app/main/default/objects/Quiz__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Mark Quiz Active to organize and to show to end user.</description>
    <inlineHelpText>Mark Quiz Active to organize and to show to end user.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>