force-app/main/default/objects/Quiz__c/fields/Questions__c.field-meta.xml
<CustomField>
    <fullName>Questions__c</fullName>
    <description>All Questions with their response in a JSON format</description>
    <label>Questions</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>