force-app/main/default/objects/Quiz__c/fields/Quiz_Code__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Code__c</fullName>
    <displayFormat>Q-{0000}</displayFormat>
    <label>Quiz Code</label>
    <type>AutoNumber</type>
</CustomField>