force-app/main/default/objects/Quiz__c/fields/Quiz_Time__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Time__c</fullName>
    <description>overall quiz time in minutes.</description>
    <inlineHelpText>enter quiz time in minutes.</inlineHelpText>
    <label>Quiz Time</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>