force-app/main/default/objects/Quiz__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Using to render end-user UI based on the sort order</description>
    <inlineHelpText>quiz order</inlineHelpText>
    <label>Sort Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>