force-app/main/default/objects/Quiz__c/fields/Trailblazer_Event__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Trailblazer Event</label>
    <referenceTo>Trailblazer_Event__c</referenceTo>
    <relationshipLabel>Quizzes</relationshipLabel>
    <relationshipName>Quizzes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>