force-app/main/default/objects/Quiz__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Trailblazer_Event__c</columns>
    <columns>NAME</columns>
    <columns>Questions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>